<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.details.ThingDetailsActivity">

    <ScrollView
        android:layout_width="match_parent" android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Space
                    android:layout_width="24dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0" />

                <ImageButton
                    android:id="@+id/close"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/close"
                    android:onClick="close" />

                <Space
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0" />

                <TextView
                    android:id="@+id/new_clothes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:gravity="center_horizontal|top"
                    android:text="@string/new_clothes"
                    android:textAppearance="@style/wipT1" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="753dp"
                android:background="@drawable/chouse"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/thing_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:textAppearance="@style/wipT2" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <TextView
                    android:id="@+id/photo"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/photo"
                    android:textAppearance="@style/wipT2" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />


                <ImageButton
                    android:id="@+id/add_photo"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:background="@drawable/photo_fon"
                    android:saveEnabled="true"
                    android:scaleType="center"
                    android:src="@drawable/camera" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/thing_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/size"
                    android:textAppearance="@style/wipT2" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/thing_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/color"
                    android:textAppearance="@style/wipT2" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/thing_catedory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/category"
                    android:textAppearance="@style/wipT2" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <Button
                    android:id="@+id/save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="save"
                    android:text=" Сохранить" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>