<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chouse"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded">

    <TextView
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal|top"
        android:text="@string/add"
        android:textAppearance="@style/wipT1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/thing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="65dp"
        android:layout_marginTop="76dp"
        android:gravity="top"
        android:text="@string/chouse_clothes"
        android:textAppearance="@style/wipT2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="152dp"
        android:layout_marginEnd="45dp"
        android:gravity="top"
        android:text="@string/chouse_set"
        android:textAppearance="@style/wipT2"
        app:layout_constraintBottom_toBottomOf="@+id/thing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/button_thing"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="8dp"
        android:background="#00000000"
        android:onClick="add_clothes"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thing"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/t_shirt" />

    <ImageButton
        android:id="@+id/button_set"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="35dp"
        android:background="#00000000"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/button_thing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/button_thing"
        app:layout_constraintTop_toBottomOf="@+id/thing"
        app:srcCompat="@drawable/wardrobe" />

    <Space
        android:id="@+id/space"
        android:layout_width="412dp"
        android:layout_height="20dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>